syntax = "proto3";

package user;

option go_package = "./pb/user";

service Profile {
    rpc AuthUser (AuthUserRequest) returns (AuthUserReply) {}
    rpc RegisterUser (RegisterRequest) returns (Message) {}
}

message AuthUserRequest {
    string email = 1;
    string password = 2;
}

message AuthUserReply {
    bool isuser = 1;
    UserInfo info = 2;
}

message UserInfo {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string role = 3;
    string password = 4;
}

message Message {
    string message = 1;
}
